--- a/index.html
+++ b/index.html
@@ -1,20 +1,53 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="ko">
 <head>
-<meta charset="UTF-8">
-
-metap
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>the Fitness</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" >
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto+Condensed&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
-viewport
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 <body>
-
-<a href="">한울직업전문학교</a>
-
-
-
+	<h1 class="d-none">theFitness</h1>
+	<div class="top-bar-outer">
+		<div class="top-bar">
+			<div class="logo">
+				<img src="images/logo.gif" alt="the fitness | 더피트니스 광주">
+			</div>
+			<!-- /.logo -->
+			<div class="top-menu">
+				<a href="#">Home</a>
+				<a href="#">News</a>
+				<a href="#">Sitemap</a>
+			</div>
+			<!-- /.top-menu -->
+		</div>
+	</div>
+	<!-- /.top-bar-outer -->
+	<div class="marketing-outer">
+		<div class="marketing">
+			<div class="model">
+				<img src="images/visual_img.png" alt="전속모델">
+			</div>
+			<div class="text">
+				<p>Build</p>
+				<p>your</p>
+				<p>Body</p>
+			</div>
+		</div>
+	</div>
+	<!-- /.marketing-outer -->
+	
+	
+	<script src="script/main.js"></script>
 </body>
 </html>
+
+
+
+
+
+
