--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" >
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto+Condensed&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -40,7 +40,14 @@
 		</div>
 	</div>
 	<!-- /.marketing-outer -->
-	
+	<div class="menu-outer">
+		<div class="menu">
+			<a href="#">체지방이란?</a>
+			<a href="#">운동시작하기</a>
+			<a href="#">유산소운동</a>
+		</div>
+	</div>
+	<!-- /.menu-outer -->
 	
 	<script src="script/main.js"></script>
 </body>
